--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "flickity": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
     "swiper": "^8.4.6"
   },
   "devDependencies": {
